인덱스 사용 스킬 수정

--- a/acebed.html
+++ b/acebed.html
@@ -30,11 +30,11 @@
             <li>2021.6 ~ 2021.7</li>
             <li>HTML, CSS, JS-jQuery, PHP&MySQL</li>
             <li>1인</li>
-            <li class="ace_link">http://vampireapire.dothome.co.kr</li>
+            <li class="ace_link">http://shinyluck93.dothome.co.kr</li>
             <li class="ace_link11">
               https://github.com/shinyluck12/acebed_clone
             </li>
-            <li>퍼블리싱(100%)</li>
+            <li>퍼블리싱(100%)/ 마리아DB 글 작성 데이터 저장</li>
             <li>기존 사이트의 코드를 참고하여 제작</li>
           </ul>
         </div>
