--- a/eoyeomo.html
+++ b/eoyeomo.html
@@ -27,10 +27,10 @@
             <li>기타</li>
           </ul>
           <ul class="info_list2">
-            <li>2021.6 ~ 2021.7</li>
-            <li>HTML, CSS, JS-jQuery, PHP&MySQL</li>
+            <li>2021.8 ~ 2021.9</li>
+            <li>HTML, CSS, JS-jQuery</li>
             <li>1인</li>
-            <li class="ace_link3">http://vampireapire.dothome.co.kr</li>
+            <li class="ace_link3">http://vampireapire12.dothome.co.kr</li>
             <li class="ace_link33">
               https://github.com/shinyluck12/eoyeomo_clone
             </li>
