--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 </div>
               </div>
               <div class="pj_tools">
-                <p>HTML, CSS, JS-jQuery</p>
+                <p>HTML, CSS</p>
               </div>
             </article>
           </section>
@@ -354,7 +354,7 @@
                 </div>
               </div>
               <div class="pj_tools">
-                <p>HTML, CSS, Vue.js, JS-jQuery</p>
+                <p>HTML, CSS, Vue.js</p>
               </div>
             </article>
           </section>
