--- a/kumkang.html
+++ b/kumkang.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ace Bed</title>
+    <title>Kumkang</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/kumkang.css" />
     <!-- <link href="//font.elice.io/EliceDigitalBaeum.css" rel="stylesheet"> -->
@@ -30,7 +30,7 @@
             <li>2021.9 ~ 2021.10</li>
             <li>HTML, CSS, JS-jQuery</li>
             <li>2인</li>
-            <li class="ace_link4">http://shinyluck93.dothome.co.kr</li>
+            <li class="ace_link4">http://shinyluck12.dothome.co.kr</li>
             <li class="ace_link44">https://github.com/shinyluck12/kumkang_renewal</li>
             <li>전반적인 레이아웃 디자인</li>
             <li>메인/헤더푸터 수정/일부 서브페이지/반응형 페이지 퍼블리싱</li>
@@ -68,6 +68,6 @@
       </section>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js?ver=1"></script>
   </body>
 </html>
