--- a/roundaround.html
+++ b/roundaround.html
@@ -22,15 +22,15 @@
             <li>개발 언어</li>
             <li>개발 인원</li>
             <li>링크</li>
-            <li>기여도</li>
             <li>깃허브</li>
+            <li>기여도</li>
             <li>기타</li>
           </ul>
           <ul class="info_list2">
-            <li>2021.6 ~ 2021.7</li>
-            <li>HTML, CSS, JS-jQuery, PHP&MySQL</li>
+            <li>2021.7 ~ 2021.8</li>
+            <li>HTML, CSS</li>
             <li>1인</li>
-            <li class="ace_link2">http://shinyluck12.dothome.co.kr</li>
+            <li class="ace_link2">http://vampireapire.dothome.co.kr</li>
             <li class="ace_link22">
               https://github.com/shinyluck12/roundaround_clone
             </li>
